# Bilibili-av-bv-converter

./: README.md  avbv.py  pyproject.toml
.github/workflows/: release-to-pypi.yml
abv_py/: __init__.py
abv_py/const/: __init__.py
abv_py/util/: __init__.py
tests/: test_av2bv.py  test_bv2av.py
