[tool.poetry]
name = "abv-py"
version = "0.2.1"
description = "bilibili AV/BV converter with avid>2^28 support"
authors = ["poly000"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/poly000/abv-py"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
